--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<a href="#main-content" class="accessibility-skip-link">Skip to main content</a>
+<a tabindex="1" href="#main-content" class="accessibility-skip-link">Skip to main content</a>
 
 <header>
   <div class="img-profile">
