--- a/css/layout_default.css
+++ b/css/layout_default.css
@@ -518,9 +518,11 @@ body {
     display: grid;
     grid-template-areas:
         "rating title . finished"
+        "editor editor . series"
         "author author . series"
         "narrator narrator . series"
-        "summary summary summary summary";
+        "summary summary summary summary"
+        "review review review review";
     grid-template-columns: 30px fit-content(550px) auto auto;
     box-shadow: 3px 3px 6px rgba(0,0,0,0.4);
     &::before {
@@ -540,14 +542,16 @@ body {
     }
     &:is([aria-current], :focus, :active) {
       background-color: var(--color-highlight);
-      grid-template-rows: auto auto auto auto;
+      grid-template-rows: auto auto auto auto auto;
     }
     &:not([aria-current], :focus, :active) {
-      grid-template-rows: auto 0 0 0;
+      grid-template-rows: auto 0 0 0 0;
       section:is(
+        [data-editor],
         [data-author],
         [data-series],
         [data-summary],
+        [data-review],
         [data-narrator],
         [data-vibe]
       ) {
@@ -568,13 +572,28 @@ body {
         font-weight: var(--font-weight-bolder);
         text-align: end;
     }
+    section[data-editor] {
+        grid-area: editor;
+        font-weight: 600;
+        margin-top: 1em;
+        &::before {
+          font-style: italic;
+          content: "Editors: ";
+        }
+        &[data-count="1"]::before {
+            content: "Editor: ";
+        }
+    }
     section[data-author] {
         grid-area: author;
         font-weight: 600;
         margin-top: 1em;
         &::before {
-            content: "Author: ";
+            content: "Authors: ";
             font-style: italic;
+        }
+        &[data-count="1"]::before {
+            content: "Author: ";
         }
     }
     section[data-series] {
@@ -596,6 +615,11 @@ body {
     }
     section[data-summary] {
         grid-area: summary;
+        max-width: 650px;
+        margin-top: 1em;
+    }
+    section[data-review] {
+        grid-area: review;
         max-width: 650px;
         margin-top: 1em;
     }
