Small style fixes

--- a/Games/Set/style/master.css
+++ b/Games/Set/style/master.css
@@ -67,6 +67,10 @@ html, body {
     /*padding: 10px;*/
     vertical-align: middle;
     line-height: 5vh;
+    & button {
+        height: 60%;
+        margin-right: 10px;
+    }
 }
 
 .card {
