--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -30,7 +30,7 @@ layout: base
     </li>
 
     <li>
-      <a href="/assets/Theodore_Lindsey_Resume.pdf" target="_blank" aria-label="PDF Resume (opens in a new tab)">Resume</a>
+      <a href="/bio/employment.html">Resume</a>
     </li>
   </ul>
 </nav>
