--- a/css/layout_default.css
+++ b/css/layout_default.css
@@ -37,31 +37,23 @@ a:is([aria-current], :hover, :active, :focus) {
   /* color: hsl(195deg, 90%, 32%); */
   color: var(--color-text-link-hover);
   text-decoration: dotted underline;
-  background-color: var(--color-background-main);
 }
 
 header {
-  --border-radius: 5px;
   border-radius: var(--border-radius);
   grid-area: head;
   background-color: var(--color-background-header);
-  margin-bottom: 3em;
+  margin-bottom: var(--header-margin);
   & div.img-profile {
     display: inline-block;
-    width: 20ch;
-    height: 20ch;
-  }
-  & div.img-profile {
-    width: 20ch;
-    height: 20ch;
-    display: inline-block;
+    width: var(--header-height);
+    height: var(--header-height);
   }
   & div.img-profile>img {
     position: absolute;
-    border-radius: 1rem;
-    border-top-left-radius: var(--border-radius);;
-    width: 20ch;
-    height: 20ch;
+    border-radius: var(--border-radius) 1rem 1rem var(--border-radius);
+    width: var(--header-height);
+    height: var(--header-height);
   }
   & div.img-profile>img:first-child {
     z-index: 1;
@@ -78,10 +70,12 @@ header {
   & a.hero-link {
     font-size: 3rem;
     white-space: nowrap;
+    vertical-align: bottom;
   }
 }
 
 nav {
+  border-radius: var(--border-radius) 0 0 var(--border-radius);
   position:sticky;
   top: 0;
   grid-area: nav;
@@ -100,6 +94,7 @@ nav {
 }
 main {
   box-sizing: border-box;
+  border-top-right-radius: var(--border-radius);
   padding: var(--principle-padding);
   grid-area: content;
   /* background-color: darksalmon; */
@@ -442,10 +437,13 @@ body::after {
   grid-area: spacer;
 }
 body {
+  --border-radius: 5px;
+  --header-height: 164px;
+  --header-margin: 36px;
   color: var(--color-text);
   display: grid;
   grid-template-columns: 200px fit-content(1000px);
-  grid-template-rows: auto auto auto 1fr auto;
+  grid-template-rows: calc(var(--header-height) + var(--header-margin)) auto auto 1fr auto;
   grid-template-areas:
   "head head ."
   "nav content ."
@@ -460,9 +458,11 @@ body {
 }
 @media (max-width: 1200px){
   body{
+    --border-radius: 0px;
+    --header-height: 48px;
+    --header-margin: 0px;
     grid-template-columns: 200px auto;
     header {
-      margin-bottom: 0;
       a.hero-link {
         font-size: 2rem;
         white-space: nowrap;
